Removed useless info from panes. Removed unused sass code.

--- a/html/search.html
+++ b/html/search.html
@@ -187,9 +187,9 @@
           </div>
         </div>
         <div class="panels">
-            <div class="panel col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-art col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="project.html">Sample art panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample art panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
@@ -197,9 +197,11 @@
                 </div>
                 <div class="info-container">
                   <p>by <a href="#" class="author">John Doe</a></p>
-                  <p class="project-category">Category: <a href="#">Art</a></p>
                   <hr>
                   <ul class="project_hashtags">
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Art</span></a>
+                    </li>
                     <li class="hashtag">
                       <a href="#"><span class="label label-success">#Photoshop</span></a>
                     </li>
@@ -210,11 +212,6 @@
                       <a href="#"><span class="label label-success">#Lightroom</span></a>
                     </li>
                   </ul>
-                  <p class="progress-header">Progress</p>
-                  <div class="progress">
-                    <div class="progress-bar" style="width: 100%"></div>
-                  </div>
-                  <hr>
                   <ul class="project-params">
                     <li class="param">
                       <span>40 <i class="fa fa-heart-o"></i></span>
@@ -225,6 +222,8 @@
                     <li class="param">
                       <span>0/3 <i class="fa fa-child"></i></span>
                     </li>
+                    <li class="param">
+                      <span>25% <i class="fa fa-line-chart"></i></span>
                   </ul>
                   <div class="description-sector">
                     <p class="description-header"><b>Description</b></p>
@@ -233,7 +232,7 @@
                 </div>
               </div>
             </div>
-            <div class="panel panel-profile col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-profile col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-body">
                 <div class="image-container profile-img">
                   <a href="#profile"><img class="img-circle img-responsive" src="../img/author-m.jpg"></img></a>
@@ -269,9 +268,9 @@
                 </div>
               </div>
             </div>
-            <div class="panel col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-art col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="project.html">Sample art panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample art panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
@@ -279,9 +278,11 @@
                 </div>
                 <div class="info-container">
                   <p>by <a href="#" class="author">John Doe</a></p>
-                  <p class="project-category">Category: <a href="#">Art</a></p>
                   <hr>
                   <ul class="project_hashtags">
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Art</span></a>
+                    </li>
                     <li class="hashtag">
                       <a href="#"><span class="label label-success">#Photoshop</span></a>
                     </li>
@@ -292,11 +293,6 @@
                       <a href="#"><span class="label label-success">#Lightroom</span></a>
                     </li>
                   </ul>
-                  <p class="progress-header">Progress</p>
-                  <div class="progress">
-                    <div class="progress-bar" style="width: 100%"></div>
-                  </div>
-                  <hr>
                   <ul class="project-params">
                     <li class="param">
                       <span>40 <i class="fa fa-heart-o"></i></span>
@@ -307,6 +303,8 @@
                     <li class="param">
                       <span>0/3 <i class="fa fa-child"></i></span>
                     </li>
+                    <li class="param">
+                      <span>25% <i class="fa fa-line-chart"></i></span>
                   </ul>
                   <div class="description-sector">
                     <p class="description-header"><b>Description</b></p>
@@ -315,7 +313,7 @@
                 </div>
               </div>
             </div>
-            <div class="panel panel-hashtag col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-hashtag col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
                 <h3 class="panel-title"><a href="project.html">#Java</a></h3>
               </div>
@@ -332,9 +330,9 @@
                 </div>
               </div>
             </div>
-            <div class="panel col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-art col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="project.html">Sample art panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample art panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
@@ -342,9 +340,11 @@
                 </div>
                 <div class="info-container">
                   <p>by <a href="#" class="author">John Doe</a></p>
-                  <p class="project-category">Category: <a href="#">Art</a></p>
                   <hr>
                   <ul class="project_hashtags">
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Art</span></a>
+                    </li>
                     <li class="hashtag">
                       <a href="#"><span class="label label-success">#Photoshop</span></a>
                     </li>
@@ -355,11 +355,6 @@
                       <a href="#"><span class="label label-success">#Lightroom</span></a>
                     </li>
                   </ul>
-                  <p class="progress-header">Progress</p>
-                  <div class="progress">
-                    <div class="progress-bar" style="width: 100%"></div>
-                  </div>
-                  <hr>
                   <ul class="project-params">
                     <li class="param">
                       <span>40 <i class="fa fa-heart-o"></i></span>
@@ -370,6 +365,8 @@
                     <li class="param">
                       <span>0/3 <i class="fa fa-child"></i></span>
                     </li>
+                    <li class="param">
+                      <span>25% <i class="fa fa-line-chart"></i></span>
                   </ul>
                   <div class="description-sector">
                     <p class="description-header"><b>Description</b></p>
@@ -378,7 +375,7 @@
                 </div>
               </div>
             </div>
-            <div class="panel panel-profile col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-profile col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-body">
                 <div class="image-container profile-img">
                   <a href="#profile"><img class="img-circle img-responsive" src="../img/author-m.jpg"></img></a>
@@ -414,7 +411,7 @@
                 </div>
               </div>
             </div>
-            <div class="panel panel-hashtag col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-hashtag col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
                 <h3 class="panel-title"><a href="project.html">#Java</a></h3>
               </div>
@@ -431,9 +428,9 @@
                 </div>
               </div>
             </div>
-            <div class="panel col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-art col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="project.html">Sample art panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample art panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
@@ -441,9 +438,11 @@
                 </div>
                 <div class="info-container">
                   <p>by <a href="#" class="author">John Doe</a></p>
-                  <p class="project-category">Category: <a href="#">Art</a></p>
                   <hr>
                   <ul class="project_hashtags">
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Art</span></a>
+                    </li>
                     <li class="hashtag">
                       <a href="#"><span class="label label-success">#Photoshop</span></a>
                     </li>
@@ -454,11 +453,6 @@
                       <a href="#"><span class="label label-success">#Lightroom</span></a>
                     </li>
                   </ul>
-                  <p class="progress-header">Progress</p>
-                  <div class="progress">
-                    <div class="progress-bar" style="width: 100%"></div>
-                  </div>
-                  <hr>
                   <ul class="project-params">
                     <li class="param">
                       <span>40 <i class="fa fa-heart-o"></i></span>
@@ -469,6 +463,8 @@
                     <li class="param">
                       <span>0/3 <i class="fa fa-child"></i></span>
                     </li>
+                    <li class="param">
+                      <span>25% <i class="fa fa-line-chart"></i></span>
                   </ul>
                   <div class="description-sector">
                     <p class="description-header"><b>Description</b></p>
