Added linkedIn page reference, created profile page and style/js files.

--- a/html/about.html
+++ b/html/about.html
@@ -175,7 +175,7 @@
               <p class="centered margined info">4th course Student at NTUU "KPI"</p>
             </div>
             <div class="col-sm-4 teammate">
-                <a class="image-vd" href="#link"></a>
+                <a class="image-vd" href="https://www.linkedin.com/profile/view?id=356096091"></a>
                 <h4 class="centered margined">Daniyil Vasylenko</h4>
                 <p class="centered margined info">4th course Student at NTUU "KPI"</p>
             </div>
