Fixed list padding, added links to other pages.

--- a/html/search.html
+++ b/html/search.html
@@ -151,7 +151,8 @@
           </form>
         </div>
       </section>
-    </div> <!-- Auth end -->
+    </div>
+    <!-- Auth end -->
 
     <div class="row content-wrapper">
       <div class="menu-section col-xs-12 col-sm-5 col-md-4 col-lg-2">
@@ -196,19 +197,19 @@
                   <a href="project.html"><img src="../img/proj_img-1.jpg"></img></a>
                 </div>
                 <div class="info-container">
-                  <p>by <a href="#" class="author">John Doe</a></p>
+                  <p>by <a href="profile.html" class="author">John Doe</a></p>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Art</span></a>
+                      <a href="search.html"><span class="label label-success">#Art</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Photoshop</span></a>
+                      <a href="search.html"><span class="label label-success">#Photoshop</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Illustrator</span></a>
+                      <a href="search.html"><span class="label label-success">#Illustrator</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Lightroom</span></a>
+                      <a href="search.html"><span class="label label-success">#Lightroom</span></a>
                     </li>
                   </ul>
                   <ul class="project-params">
@@ -234,20 +235,20 @@
             <div class="panel panel-profile col-xs-12 col-sm-12 col-md-6 col-lg-4 col-lg-offset-1">
               <div class="panel-body">
                 <div class="image-container profile-img">
-                  <a href="#"><img class="img-circle img-responsive" src="../img/author-m.jpg"></img></a>
+                  <a href="profile.html"><img class="img-circle img-responsive" src="../img/author-m.jpg"></img></a>
                 </div>
                 <div class="info-container">
-                  <p class="author"><a href="#" class="author">John Doe</a></p>
+                  <p class="author"><a href="profile.html" class="author">John Doe</a></p>
                   <p class="author-email">johnDoe@gmail.com</p>
                     <ul class="project_hashtags">
                       <li class="hashtag">
-                        <a href="#"><span class="label label-success">#CSS3</span></a>
+                        <a href="search.html"><span class="label label-success">#CSS3</span></a>
                       </li>
                       <li class="hashtag">
-                        <a href="#"><span class="label label-success">#HTML5</span></a>
+                        <a href="search.html"><span class="label label-success">#HTML5</span></a>
                       </li>
                       <li class="hashtag">
-                        <a href="#"><span class="label label-success">#JS</span></a>
+                        <a href="search.html"><span class="label label-success">#JS</span></a>
                       </li>
                     </ul>
                   <ul class="project-params">
@@ -274,19 +275,19 @@
                   <a href="project.html"><img src="../img/proj_img-1.jpg"></img></a>
                 </div>
                 <div class="info-container">
-                  <p>by <a href="#" class="author">John Doe</a></p>
+                  <p>by <a href="profile.html" class="author">John Doe</a></p>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Art</span></a>
+                      <a href="search.html"><span class="label label-success">#Art</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Photoshop</span></a>
+                      <a href="search.html"><span class="label label-success">#Photoshop</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Illustrator</span></a>
+                      <a href="search.html"><span class="label label-success">#Illustrator</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Lightroom</span></a>
+                      <a href="search.html"><span class="label label-success">#Lightroom</span></a>
                     </li>
                   </ul>
                   <ul class="project-params">
@@ -317,10 +318,10 @@
                 <div class="info-container">
                   <ul class="hashtag-params">
                     <li class="param">
-                      <span><a href="#findProjects">33 <i class="fa fa-file-archive-o"></i></a></span>
+                      <span><a href="search.html">33 <i class="fa fa-file-archive-o"></i></a></span>
                     </li>
                     <li class="param">
-                      <span><a href="#findPeople">350 <i class="fa fa-users"></i></a></span>
+                      <span><a href="search.html">350 <i class="fa fa-users"></i></a></span>
                     </li>
                   </ul>
                 </div>
@@ -335,19 +336,19 @@
                   <a href="project.html"><img src="../img/proj_img-1.jpg"></img></a>
                 </div>
                 <div class="info-container">
-                  <p>by <a href="#" class="author">John Doe</a></p>
+                  <p>by <a href="profile.html" class="author">John Doe</a></p>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Art</span></a>
+                      <a href="search.html"><span class="label label-success">#Art</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Photoshop</span></a>
+                      <a href="search.html"><span class="label label-success">#Photoshop</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Illustrator</span></a>
+                      <a href="search.html"><span class="label label-success">#Illustrator</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Lightroom</span></a>
+                      <a href="search.html"><span class="label label-success">#Lightroom</span></a>
                     </li>
                   </ul>
                   <ul class="project-params">
@@ -380,13 +381,13 @@
                   <p class="author-email">johnDoe@gmail.com</p>
                     <ul class="project_hashtags">
                       <li class="hashtag">
-                        <a href="#"><span class="label label-success">#CSS3</span></a>
+                        <a href="search.html"><span class="label label-success">#CSS3</span></a>
                       </li>
                       <li class="hashtag">
-                        <a href="#"><span class="label label-success">#HTML5</span></a>
+                        <a href="search.html"><span class="label label-success">#HTML5</span></a>
                       </li>
                       <li class="hashtag">
-                        <a href="#"><span class="label label-success">#JS</span></a>
+                        <a href="search.html"><span class="label label-success">#JS</span></a>
                       </li>
                     </ul>
                   <ul class="project-params">
@@ -412,10 +413,10 @@
                 <div class="info-container">
                   <ul class="hashtag-params">
                     <li class="param">
-                      <span><a href="#findProjects">33 <i class="fa fa-file-archive-o"></i></a></span>
+                      <span><a href="search.html">33 <i class="fa fa-file-archive-o"></i></a></span>
                     </li>
                     <li class="param">
-                      <span><a href="#findPeople">350 <i class="fa fa-users"></i></a></span>
+                      <span><a href="search.html">350 <i class="fa fa-users"></i></a></span>
                     </li>
                   </ul>
                 </div>
@@ -430,19 +431,19 @@
                   <a href="project.html"><img src="../img/proj_img-1.jpg"></img></a>
                 </div>
                 <div class="info-container">
-                  <p>by <a href="#" class="author">John Doe</a></p>
+                  <p>by <a href="profile.html" class="author">John Doe</a></p>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Art</span></a>
+                      <a href="search.html"><span class="label label-success">#Art</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Photoshop</span></a>
+                      <a href="search.html"><span class="label label-success">#Photoshop</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Illustrator</span></a>
+                      <a href="search.html"><span class="label label-success">#Illustrator</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">#Lightroom</span></a>
+                      <a href="search.html"><span class="label label-success">#Lightroom</span></a>
                     </li>
                   </ul>
                   <ul class="project-params">
