--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="caption">Slide 1</h1>
             <div class="contrast">
               <h4>Description for slide 1</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -32,7 +32,7 @@
             <h1 class="caption">Slide 2</h1>
             <div class="contrast">
               <h4>Description for slide 2</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -42,7 +42,7 @@
             <h1 class="caption">Slide 3</h1>
             <div class="contrast">
               <h4>Description for slide 3</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -52,7 +52,7 @@
             <h1 class="caption">Slide 4</h1>
             <div class="contrast">
               <h4>Description for slide 4</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -62,7 +62,7 @@
             <h1 class="caption">Skyscrapers</h1>
             <div class="contrast">
               <h4>Some lorem ipsum stuff.</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -72,7 +72,7 @@
             <h1 class="caption">Picturesque picture</h1>
             <div class="contrast">
               <h4>Some lorem ipsum stuff here.</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -82,7 +82,7 @@
             <h1 class="caption">Cityscape</h1>
             <div class="contrast">
               <h4>It's New York, babe :)</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -92,7 +92,7 @@
             <h1 class="caption">Night shot</h1>
             <div class="contrast">
               <h4>Nicely done with focus</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -102,7 +102,7 @@
             <h1 class="caption">Black Cat</h1>
             <div class="contrast">
               <h4>The last slide... Rly :)</h4>
-              <a href="#" class="button square large line-white">Read more</a>
+              <a href="html/project.html" class="button square large line-white">Read more</a>
             </div>
           </div>
         </li>
@@ -293,23 +293,23 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p>by <a href="#" class="author">John Doe</a></p>
+            <p>by <a href="html/profile.html" class="author">John Doe</a></p>
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">#Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -339,23 +339,23 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p>by <a href="#" class="author">John Doe</a></p>
+            <p>by <a href="html/profile.html" class="author">John Doe</a></p>
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">#Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -385,23 +385,23 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p>by <a href="#" class="author">John Doe</a></p>
+            <p>by <a href="html/profile.html" class="author">John Doe</a></p>
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">#Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -431,23 +431,23 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p>by <a href="#" class="author">John Doe</a></p>
+            <p>by <a href="html/profile.html" class="author">John Doe</a></p>
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">#Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -477,23 +477,23 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p>by <a href="#" class="author">John Doe</a></p>
+            <p>by <a href="html/profile.html" class="author">John Doe</a></p>
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">#Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -523,23 +523,23 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p>by <a href="#" class="author">John Doe</a></p>
+            <p>by <a href="html/profile.html" class="author">John Doe</a></p>
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">#Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -569,23 +569,23 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p>by <a href="#" class="author">John Doe</a></p>
+            <p>by <a href="html/profile.html" class="author">John Doe</a></p>
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">#Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
@@ -615,23 +615,23 @@
         </div>
         <div class="panel-body">
           <div class="image-container">
-            <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            <a href="html/project.html"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p>by <a href="#" class="author">John Doe</a></p>
+            <p>by <a href="html/profile.html" class="author">John Doe</a></p>
 
             <ul class="project_hashtags">
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Art</span></a>
+                <a href="html/search.html"><span class="label label-success">#Art</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Photoshop</span></a>
+                <a href="html/search.html"><span class="label label-success">#Photoshop</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Illustrator</span></a>
+                <a href="html/search.html"><span class="label label-success">#Illustrator</span></a>
               </li>
               <li class="hashtag">
-                <a href="#"><span class="label label-success">#Lightroom</span></a>
+                <a href="html/search.html"><span class="label label-success">#Lightroom</span></a>
               </li>
             </ul>
             <ul class="project-params">
