--- a/html/profile.html
+++ b/html/profile.html
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a class="navbar-brand vt-p" href="index.html">
+          <a class="navbar-brand vt-p" href="../index.html">
             <img id="emblem" src="../img/emblem_dark.png"/>
             <span class="brand-name">TeamBaker</span>
           </a>
@@ -36,69 +36,74 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="html/about.html" class="vt-p">About</a></li>
+            <li><a href="about.html" class="vt-p">About</a></li>
             <li><a class="auth" href="#signin" class="vt-p">Sign in</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
+
     <div class="page-content">
-      <div class="row top col-xs-12">
-        <img class="profile-avatar" src="../img/profile_avatar.jpg">
-        <p>From: 10 May 2015</p>
-        <p>Name: John</p>
-        <p>Last name: Doe</p>
-        <p>Email: jdoe@gmail.com</p>
-        <p>Country: Great Britain</p>
-        <p>Age: 23</p>
-        <a href="#">Facebook Link here</a>
-        <a href="#">Twitter Link here</a>
-        <a href="#">Google Plus Link here</a>
-        <a href="#">Github Link here</a>
-        <a href="#">Add new link button here</a>
-        <ul>Interests:
-          <li>Football</li>
-          <li>Programming</li>
-          <li>Web design</li>
-          <li>Poker</li>
-        </ul>
-        <ul>Skills:
-          <li>Programming</li>
-          <li>English</li>
-          <li>Team management</li>
-        </ul>
-
-        <p>Rating here</p>
-        <ul>Projects:
-          <li>
-            <div class="project">
-              <p>Project #1</p>
-              <p>Status: active</p>
-            </div>
-          </li>
-          <li>
-            <div class="project">
-              <p>Project #2</p>
-              <p>Status: complete</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div class="row middle col-xs-12">
-        <ul>
-          <li>
-            <div clas="portfolio">
-              <p>Name</p>
-              <p>Aim</p>
-              <p>Role</p>
-              <p>Skills</p>
-              <p>Experience</p>
-              <p><a href="#">Link</a></p>
-            </div>
-          </li>
-        </ul>
+      <div class="row top col-xs-12 col-sm-10 col-sm-offset-1">
+        <div class="content">
+          <div class="left col-xs-6 col-sm-5">
+            <img class="profile-avatar" src="../img/profile_avatar.jpg">
+            <ul class="links">
+              <li class="link"><a href="#">Facebook Link here</a></li>
+              <li class="link"><a href="#">Twitter Link here</a></li>
+              <li class="link"><a href="#">Google Plus Link here</a></li>
+              <li class="link"><a href="#">Github Link here</a></li>
+              <li class="link"><a href="#">Add new link button here</a></li>
+            </ul>
+            <p>Rating here</p>
+          </div>
+          <div class="right col-xs-6 col-sm-6">
+            <p>From: 10 May 2015</p>
+            <p>Name: John</p>
+            <p>Last name: Doe</p>
+            <p>Email: jdoe@gmail.com</p>
+            <p>Country: Great Britain</p>
+            <p>Age: 23</p>
+            <ul>Interests:
+              <li>Football</li>
+              <li>Programming</li>
+              <li>Web design</li>
+              <li>Poker</li>
+            </ul>
+            <ul>Skills:
+              <li>Programming</li>
+              <li>English</li>
+              <li>Team management</li>
+            </ul>
+            <ul>Projects:
+              <li>
+                <div class="project">
+                  <p>Project #1</p>
+                  <p>Status: active</p>
+                </div>
+              </li>
+              <li>
+                <div class="project">
+                  <p>Project #2</p>
+                  <p>Status: complete</p>
+                </div>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <div clas="portfolio">
+                  <p>Name</p>
+                  <p>Aim</p>
+                  <p>Role</p>
+                  <p>Skills</p>
+                  <p>Experience</p>
+                  <p><a href="#">Link</a></p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
 
       <div class="row bottom col-xs-12">
@@ -292,6 +297,7 @@
     </footer>
 
     <script src="../js/jquery-1.11.2.min.js"></script>
+    <script src="../js/jquery.leanModal.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/modernizr-custom-v2.8.3.min.js"></script>
     <script src="../js/buttonplate.min.js"></script>
