--- a/html/profile.html
+++ b/html/profile.html
@@ -192,9 +192,9 @@
             <label>Email / Username</label> <input type="text" placeholder="Email or username"><br>
             <label>Password</label> <input type="password" placeholder="Password"><br>
 
-            <div class="formplate checkbox">
+            <div class="formplate">
               <input type="checkbox" name="checkbox" value="checkbox" id="check_remember">
-              <p>Remember me</p>
+              <p class="checkbox_header">Remember me</p>
             </div>
 
             <div class="action_btns">
@@ -217,9 +217,9 @@
             <label>Password</label> <input type="password" placeholder="Password"><br>
             <input type="password" placeholder="Password repeat"><br>
 
-            <div class="formplate checkbox">
+            <div class="formplate">
               <input type="checkbox" name="checkbox" value="checkbox" id="check_send_updates">
-              <p>Send me updates news</p>
+              <p class="checkbox_header">Send me updates news</p>
             </div>
 
             <div class="action_btns">
